# data-cleaner

./: .gitignore  README.md  pyproject.toml  requirements.txt
cleaner/: cli.py  inspect.py  io.py  pipeline.py  report.py  rules.py
examples/: messy_test.csv
tests/: conftest.py  test_pipeline.py  test_safety.py  test_smoke.py
