[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "data-cleaner"
version = "0.1.0"
description = "Clean and normalize CSV/XLSX files and generate an audit report."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "openpyxl>=3.1",
  "python-dateutil>=2.9",
  "phonenumbers>=8.13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
data-cleaner = "cleaner.cli:main"
